[package]
name = "lovelace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
im-rc = "15.1.0"
petgraph = "0.6.5"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.38.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt", "rt-multi-thread"] }
tower-lsp = "0.20.0"
wasmtime = "24.0.0"
